# Entropic-AI

./: .gitignore  LICENSE  README.md  mkdocs.yml  paper_draft.md  pyproject.toml  setup.py  sitemap.xml
about/patent/: index.html
api/cli/: index.html
api/utilities/: index.html
applications/circuits/: index.html
applications/theories/: index.html
architecture/optimizers/: index.html
architecture/overview/: index.html
demos/: entropy_evolution_demo.ipynb
development/architecture/: index.html
development/contributing/: index.html
development/testing/: index.html
docs/: index.md
docs/about/: paper.md
docs/api/: applications.md  cli.md  core.md  utilities.md
docs/applications/: circuits.md  custom.md  molecules.md  theories.md
docs/architecture/: diffusion.md  networks.md  optimizers.md  overview.md
docs/development/: architecture.md  contributing.md  performance.md  testing.md
docs/getting-started/: examples.md  installation.md  quickstart.md
docs/guides/: faq.md
docs/theory/: emergence.md  entropy.md  foundations.md  mathematics.md  thermodynamics.md
docs/tutorials/: advanced.md  circuit-synthesis.md  law-discovery.md  molecule-design.md
eai/: __init__.py  cli.py
eai/applications/: circuit_evolution.py  molecule_evolution.py  theory_discovery.py
eai/cli/: license_cli.py  main_cli.py
eai/core/: complexity_optimizer.py  generative_diffuser.py  thermodynamic_network.py
eai/licensing/: __init__.py  decorators.py  enforcement.py  license_manager.py  validation.py
eai/utils/: entropy_utils.py  metrics.py  visualization.py
getting-started/examples/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/faq/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/about/license/: index.html
site/about/paper/: index.html
site/api/applications/: index.html
site/api/cli/: index.html
site/api/core/: index.html
site/applications/custom/: index.html
site/applications/molecules/: index.html
site/architecture/diffusion/: index.html
site/architecture/networks/: index.html
site/development/performance/: index.html
site/development/testing/: index.html
site/getting-started/examples/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/guides/faq/: index.html
site/theory/emergence/: index.html
site/theory/foundations/: index.html
site/theory/mathematics/: index.html
site/theory/thermodynamics/: index.html
site/tutorials/advanced/: index.html
site/tutorials/circuit-synthesis/: index.html
site/tutorials/law-discovery/: index.html
site/tutorials/molecule-design/: index.html
tests/: demo_license.json  test_absolute_license_enforcement.py  test_license_enforcement.py
theory/entropy/: index.html
tutorials/advanced/: index.html
tutorials/law-discovery/: index.html
